@@ -5,6 +5,7 @@
 === 1.0.31 ===
 * Updated and extended interface of dspu::RingBuffer.
 * Optimizations: dspu::MeterGraph now uses dspu::RingBuffer instead of dsp::ShiftBuffer.
+* Added support of infiniter LUFS measurement period by dspu::ILUFSMeter.
 * Fixed crash in dspu::SpectralProcessor::clear method.
 
 === 1.0.30 ===
